FIX: Z-INDEX

--- a/pages/hero 1/assets/css/style.css
+++ b/pages/hero 1/assets/css/style.css
@@ -19,7 +19,6 @@ header {
     position: absolute;
 	background-image: url(../images/oh\,\ hello\ there!.jpg);
 	background-size: 100%;
-  z-index:-2;
   overflow: visible;
   position: absolute;
 }
@@ -135,11 +134,10 @@ figure {
 /* END */
 
 .cards-list {
-  z-index: -1;
   width: 100%;
   flex-wrap: wrap;
   position: fixed;
-  
+
   height: 100dvh;
   display: flex;
   align-items: center;
@@ -150,7 +148,6 @@ figure {
 }
 
 .card {
-  z-index: -2;
   position: relative;
   width: 300px;
   height: 300px;
